<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.MainActivity">

        <TextView
            android:id="@+id/invitationNameTextView"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:text="@string/invitationTitle" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/subjectEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/invitationSubject"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/contentsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/invitationText"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/sendButton"
            style="@style/Button"
            android:layout_width="match_parent"
            android:text="@string/sendButtonName" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>