<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pageNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutOcean11"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageNameTextView">

        <ImageView
            android:id="@+id/imageViewOcean11"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/ocean_s_eleven_poster"
            app:srcCompat="@drawable/ocean11" />

        <TextView
            android:id="@+id/ocean11Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ocean11ru" />

        <Button
            android:id="@+id/detailsButtonOcean11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsButton" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutOcean12"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageNameTextView">

        <ImageView
            android:id="@+id/imageViewOcean12"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/ocean_s_twelve_poster"
            app:srcCompat="@drawable/ocean12" />

        <TextView
            android:id="@+id/ocean12Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ocean11ru" />

        <Button
            android:id="@+id/detailsButtonOcean12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsButton" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/inviteFriendButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="24dp"
        android:text="@string/inviteFriendButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageNameTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>